--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -4,7 +4,7 @@ description:         Conway's Game of Life
 license:             BSD3
 author:              Nick Chapman
 maintainer:          nic@amadido.co.uk
-github:              https://github.com/Nick-Chapman/life.git
+github:              Nick-Chapman/life.git/haskell
 
 dependencies:
 - ansi-terminal
